--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <section class="contenedor">
-                <nav id="menu">
+                <nav class="menu" id="menu">
                     <a href="#"><img src="./img/logo.png" alt="logo" class="logo"></a>
                     <ul>
                         <li><a href="vistas/daw.html">Desarrollo Web</a></li>
