--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><a href="vistas/daw.html">Desarrollo Web</a></li>
                         <li><a href="vistas/hosting.html">Hosting</a></li>
                         <li><a href="vistas/mantenimiento.html">Mantenimiento</a></li>
-                        <li><button class="empezamos" id="empezamos">¿Empezamos?</button></li>
+                        <li><a href="contacto.html"><button class="empezamos" id="empezamos">¿Empezamos?</button></a></li>
                     </ul>
                     <button class="menu-desplegable" id="boton-menu" onclick="menu()">Menú</button>
                 </nav>
