revisar footer(funcional actualmente)
revisar footer(funcional actualmente)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
     </main>
     <footer>
-        <section class="contenedor">
+        <section class="contenedor_footer">
         <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES Y UN BOTON -->
             <nav>
                 <a href="#"><img src="./img/logo.png" alt="logo" class="logo"></a>
