--- a/vistas/daw.html
+++ b/vistas/daw.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/daw.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/footerantiguo.css">
     <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <script src="../js/script.js" defer></script>
@@ -82,7 +82,7 @@
         </section>
     </main>
     <footer>
-        <section class="contenedor">
+        <section class="contenedor_footer">
             <nav>
             <a href="index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
                 <ul>
