--- a/indexantiguo.html
+++ b/indexantiguo.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/header2.css">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/footerantiguo.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <script src="./js/script.js" defer></script>
