funciona el responsive en todas las páginas

--- a/vistas/daw.html
+++ b/vistas/daw.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/headerMenu.css">
     <link rel="stylesheet" href="../css/daw.css">
-    <link rel="stylesheet" href="../css/nuevofooter.css">
+    <link rel="stylesheet" href="../css/footerSecciones.css">
     <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <script src="../js/script.js" defer></script>
@@ -32,7 +32,7 @@
     <main>
         <section class="contenedor-imagen">
             <section class="contenedor-h1">
-                <h1>Desarrollo Web</h1>
+                <h1 id="titulo">Desarrollo Web</h1>
             </section>
             <img src="../img/daw/code.jpg" alt="home" class="img-logo">
         </section>
