--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/headerMenu.css">
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/nuevofooter.css">
+    <link rel="stylesheet" href="./css/footerHome.css">
     <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <script src="./js/script.js" defer></script>
