--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="contenedor-imagen">
-            <h1>Contacto</h1>
+            <h1 id="titulo">Contacto</h1>
             <img src="../img/daw/code.jpg" alt="home" class="img-logo">
         </section>
         <section class="contenedor-titulo">
