--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>DinoDTech</title>
 </head>
 <body>
+    <!-- HEADER CON UN NAV -->
     <header>
         <nav class="menu" id="menu">
             <a href="#"><img src="./img/logo.png" alt="logo" class="logo"></a>
@@ -51,18 +52,17 @@
                     <source type="image/png"  media="(min-width: 301px) and (max-width: 999px)" srcset="./img/home/marcas700.png" />
                     <source type="image/png"  media="(min-width: 1000px) and (max-width: 1199px)" srcset="./img/home/marcas1000.png" />
                     <source type="image/png"  media="(min-width: 1200px)" srcset="./img/home/marcas1000.png" />          
-                    <img src="./img/home/marcas.png" alt="marcas" />
+                    <img src="./img/home/marcas.png" alt="imagen-marcas" />
                 </picture>
             </section>
             </div>
     </main>
     <footer>
         <section class="contenedor_footer">
-        <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES Y UN BOTON -->
+        <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES-->
             <nav class="nav-footer">
                 <a href="#"><img src="./img/logo.png" alt="logo" class="logo"></a>
                 <ul>
-                    <!-- <li><a href="contacto.php">Contacto</a></li> -->
                     <li><a href=""><img src="./img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
                     <li><a href=""><img src="./img/iconos/icono_facebook.png" alt="facebook" class="icono"></a></li>
                     <li><a href=""><img src="./img/iconos/icono_twitter.png" alt="twitter" class="icono"></a></li>
