--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -14,6 +14,7 @@
     <title>Desarrollo Web</title>
 </head>
 <body>
+    <!-- HEADER CON UN NAV -->
     <header>
         <nav class="menu" id="menu">
             <a href="../index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
@@ -30,10 +31,12 @@
         </nav>
     </header>
     <main>
+        <!-- CONTENEDOR CON IMAGEN Y TITULO -->
         <section class="contenedor-imagen">
             <h1 id="titulo">Contacto</h1>
-            <img src="../img/daw/code.jpg" alt="home" class="img-logo">
+            <img src="../img/contacto/contacto.jpg" alt="imagen-contacto" class="img-logo">
         </section>
+        <!-- CONTENEDOR CON EL FORMULARIO DE CONTACTO -->
         <section class="contenedor-titulo">
             <h2>Formulario de contacto</h2>
             <form action="" class="formulario">
@@ -56,11 +59,10 @@
     </main>
     <footer>
         <section class="contenedor_footer">
-        <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES Y UN BOTON -->
+        <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES -->
             <nav class="nav-footer">
                 <a href="#"><img src="../img/logo.png" alt="logo" class="logo"></a>
                 <ul>
-                    <!-- <li><a href="contacto.php">Contacto</a></li> -->
                     <li><a href=""><img src="../img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
                     <li><a href=""><img src="../img/iconos/icono_facebook.png" alt="facebook" class="icono"></a></li>
                     <li><a href=""><img src="../img/iconos/icono_twitter.png" alt="twitter" class="icono"></a></li>
