--- a/vistas/daw.html
+++ b/vistas/daw.html
@@ -14,6 +14,7 @@
     <title>Desarrollo Web</title>
 </head>
 <body>
+    <!-- HEADER CON UN NAV -->
     <header>
         <nav class="menu" id="menu">
             <a href="../index.html"><img src="../img/logo.png" alt="logo" class="logo"></a>
@@ -30,13 +31,15 @@
         </nav>
     </header>
     <main>
+        <!-- CONTENEDOR CON IMAGEN Y TITULO -->
         <section class="contenedor-imagen">
             <h1 id="titulo">Desarrollo Web</h1>
-            <img src="../img/daw/code.jpg" alt="home" class="img-logo">
+            <img src="../img/daw/code.jpg" alt="home" class="img-desarrollo-web">
         </section>
         <section class="contenedor-titulo">
             <h2>PLANES DE DESARROLLO WEB</h2>
         </section>
+        <!-- CONTENEDORES CON LOS PANELES SOBRE LA INFORMACIÓN DE LOS SERVICIOS -->
         <section class="contenedor-paneles">
             <section class="carta">
                 <h3>Básico</h3>
@@ -84,11 +87,10 @@
     </main>
     <footer>
         <section class="contenedor_footer">
-        <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES Y UN BOTON -->
+        <!-- SECTION CON EL MENÚ COMPUESTO POR UN NAV CON UNA LISTA DE ENLACES -->
             <nav class="nav-footer">
                 <a href="#"><img src="../img/logo.png" alt="logo" class="logo"></a>
                 <ul>
-                    <!-- <li><a href="contacto.php">Contacto</a></li> -->
                     <li><a href=""><img src="../img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
                     <li><a href=""><img src="../img/iconos/icono_facebook.png" alt="facebook" class="icono"></a></li>
                     <li><a href=""><img src="../img/iconos/icono_twitter.png" alt="twitter" class="icono"></a></li>
