--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/headerMenu.css">
-    <link rel="stylesheet" href="../css/contacto.css">
-    <link rel="stylesheet" href="../css/footerSecciones.css">
+    <link rel="stylesheet" href="../css/header-min.css">
+    <link rel="stylesheet" href="../css/contacto-min.css">
+    <link rel="stylesheet" href="../css/footerSecciones-min.css">
     <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <script src="../js/script.js" defer></script>
