--- a/vistas/mantenimiento.html
+++ b/vistas/mantenimiento.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/header-min.css">
-    <link rel="stylesheet" href="../css/mantenimiento.css">
+    <link rel="stylesheet" href="../css/mantenimiento-min.css">
     <link rel="stylesheet" href="../css/footerSecciones-min.css">
     <link rel="icon" type="image/png" href="../img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
