--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/header-min.css">
     <link rel="stylesheet" href="./css/home-min.css">
     <link rel="stylesheet" href="./css/footerHome-min.css">
-    <link rel="icon" type="image/png" href="../img/logo.png"/>
+    <link rel="icon" type="image/png" href="./img/logo.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quantico">
     <script src="./js/script.js" defer></script>
     <script src="./js/jquery-3.6.3.min.js"></script>
@@ -26,7 +26,7 @@
                 <li><a href="vistas/daw.html">Desarrollo Web</a></li>
                 <li><a href="vistas/hosting.html">Hosting</a></li>
                 <li><a href="vistas/mantenimiento.html">Mantenimiento</a></li>
-                <li><a class="active" href="contacto.html"><button class="empezamos" id="empezamos">¿Empezamos?</button></a></li>
+                <li><a class="active" href="vistas/contacto.html"><button class="empezamos" id="empezamos">¿Empezamos?</button></a></li>
             </ul>
         </nav>
     </header>
@@ -66,8 +66,8 @@
                     <li><a href=""><img src="./img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
                     <li><a href=""><img src="./img/iconos/icono_facebook.png" alt="facebook" class="icono"></a></li>
                     <li><a href=""><img src="./img/iconos/icono_twitter.png" alt="twitter" class="icono"></a></li>
-                    <li><a href="aviso-legal.php">Aviso Legal</a></li>
-                    <li><a href="cookies.php">Políticas de Privacidad y Cookies</a></li>
+                    <li><a href="#">Aviso Legal</a></li>
+                    <li><a href="#">Políticas de Privacidad y Cookies</a></li>
                 </ul>
             </nav>
         </section>
