--- a/vistas/daw.html
+++ b/vistas/daw.html
@@ -94,8 +94,8 @@
                     <li><a href=""><img src="../img/iconos/icono_instagram.png" alt="instagram" class="icono"></a></li>
                     <li><a href=""><img src="../img/iconos/icono_facebook.png" alt="facebook" class="icono"></a></li>
                     <li><a href=""><img src="../img/iconos/icono_twitter.png" alt="twitter" class="icono"></a></li>
-                    <li><a href="aviso-legal.php">Aviso Legal</a></li>
-                    <li><a href="cookies.php">Políticas de Privacidad y Cookies</a></li>
+                    <li><a href="#">Aviso Legal</a></li>
+                    <li><a href="#">Políticas de Privacidad y Cookies</a></li>
                 </ul>
             </nav>
         </section>
