--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -39,7 +39,7 @@
         <!-- CONTENEDOR CON EL FORMULARIO DE CONTACTO -->
         <section class="contenedor-titulo">
             <h2>Formulario de contacto</h2>
-            <form action="" class="formulario">
+            <form class="formulario">
                 <label for="nombre">Nombre:</label>
                 <br>
                 <input type="text" id="nombre" class="nombre">
@@ -52,7 +52,7 @@
                 <br>
                 <textarea class="asunto" id="asunto" cols="30" rows="10"></textarea>
                 <br>
-                <input type="button"  class="boton"  value="Enviar">
+                <input type="submit"  class="boton"  value="Enviar">
             </form>
         </section>
         
