--- a/vistas/daw.html
+++ b/vistas/daw.html
@@ -45,7 +45,7 @@
                 <h3>Básico</h3>
                 <h4>499€</h4>
                 <ul>
-                    <li>Máximo 4 página</li>
+                    <li>Máximo 4 páginas</li>
                     <li>Diseño e Imagen de tu página web</li>
                     <li>Imágenes de stock</li>
                     <li>Adaptada a móviles y 100% responsive</li>
