--- a/vistas/hosting.html
+++ b/vistas/hosting.html
@@ -58,10 +58,10 @@
                 <h3>Avanzado</h3>
                 <h4>10,99€/mes</h4>
                 <ul>
-                    <li>3 sitio web</li>
+                    <li>3 sitios web</li>
                     <li>100 GB de SSD</li>
                     <li>~25 000 visitas al mes</li>
-                    <li>3 cuenta de email</li>
+                    <li>3 cuentas de email</li>
                     <li>Ancho de banda ilimitado</li>
                     <li>Bases de datos ilimitadas</li>
                 </ul>
@@ -74,7 +74,7 @@
                     <li>100 sitios web</li>
                     <li>300 GB de SSD</li>
                     <li>~100 000 visitas al mes</li>
-                    <li>5 cuenta de email</li>
+                    <li>5 cuentas de email</li>
                     <li>Ancho de banda ilimitado</li>
                     <li>Bases de datos ilimitadas</li>
                 </ul>
